--- a/src/Components/Auth/RegistrationForm/RegistrationFormStyle.css
+++ b/src/Components/Auth/RegistrationForm/RegistrationFormStyle.css
@@ -167,3 +167,10 @@
     color: rgb(160, 36, 163);
     margin-left: auto;
 }
+
+@media screen and (max-width: 768px){
+    a{
+      margin-bottom: 40px;
+    }
+  }
+  
