--- a/src/Components/Auth/RegistrationForm/RegistrationFormStyle.css
+++ b/src/Components/Auth/RegistrationForm/RegistrationFormStyle.css
@@ -203,12 +203,13 @@
 
 .tc_main{
   margin: 20px 0;
-  width: 500px;
+  width: 700px;
   max-width: 100%;
   height: 550px;
   background: var(--white);
-  text-align: center;
+  text-align: justify ;
   border-radius: 3px;
+  align-items: center;
 }
 
 .tc_main .title{
@@ -218,6 +219,7 @@
   line-height: 32px;
   font-weight: 700;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .tc_main .tc_content .tc_bottom .title{
@@ -233,7 +235,7 @@
 
 .tc_main .tc_btns{
   width: 100%;
-  height: 80px;
+  height: 100px;
   padding: 21px 0;
   box-shadow: 0 -1px 5px rgba(0,0,0,0.1);
 }
@@ -245,7 +247,7 @@
 .tc_main .tc_content .tc_bottom{
   padding: 0 35px;
   overflow: auto;
-  height: calc(100% - 210px);
+  height: calc(100% - 110px);
 }
 
 .tc_main .tc_content .tc_top .icon{
@@ -261,17 +263,18 @@
 
 .tc_main .tc_content .tc_bottom .info p{
   font-style: italic;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 
 .tc_main .tc_btns button{
-  width: 125px;
+  width: 205px;
   padding: 10px;
   margin: 0 10px;
+  margin-top: 30%;
   border: 0;
   cursor: pointer;
-  border-radius: 3px;
-  transition: all 0.5s ease;
+  border-radius: 5px;
+  transition: all 0.30s ease;
 }
 
 .tc_main .tc_btns button.accept{
@@ -288,6 +291,7 @@
 .tc_main .tc_btns button.decline:hover{
   background: var(--title-clr);
   color: var(--white);
+  height: 400px;
 }
 
 .tc_main .tc_btns button.accept:hover{
