--- a/src/Components/Navbar/Navbar_LandingStyle.css
+++ b/src/Components/Navbar/Navbar_LandingStyle.css
@@ -3,11 +3,12 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
 }
 
 li {
   list-style-type: none;
+  font-family: 'Montserrat', sans-serif;
+  color:rgba(50, 50, 93, 0.23) ;
 }
 .navbar {
   display: flex;
