Continuing the articles page..

--- a/src/Components/Auth/LoginForm/LoginFormStyle.css
+++ b/src/Components/Auth/LoginForm/LoginFormStyle.css
@@ -151,7 +151,7 @@
 .welcome-message p{
     font-size: 25px;
     margin-top: auto;
-    font-family: 'Montserrat', sans-serif,;
+    font-family: 'Montserrat', sans-serif;
     font-weight: normal;
     margin-left: 60px;
     text-align: justify;
