--- a/src/pages/ArticlesStyle.css
+++ b/src/pages/ArticlesStyle.css
@@ -23,7 +23,7 @@ body {
 
 .card-list .card-item {
     background: #fff;
-    padding: 10px;
+    padding: 12.5px;
     border-radius: 8px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
     list-style: none;
@@ -47,7 +47,7 @@ body {
 .card-list span {
     display: inline-block;
     background: #F7DFF5;
-    margin-top: 10px;
+    margin-top: 5px;
     padding: 8px 15px;
     font-size: 0.75rem;
     border-radius: 50px;
@@ -73,7 +73,7 @@ body {
     color: #000;
     font-size: 1.438rem;
     margin-top: 10px;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .card-item .arrow {
@@ -117,7 +117,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    clip: rect(0px, 2000px, 450px, 0px);
+    clip: rect(0px, 2000px, 400px, 0px);
     z-index: -1;
 }
 
@@ -146,14 +146,14 @@ body {
     color: #000;
 }
 
-.Underline p{
+.Underline h3{
     font-family: "Montserrat",  sans-serif;
-    font-size: 23.5px;
+    font-size: 21.5px;
     text-align: center;
     color: #4D4D4D;
     text-align: center;
-    font-weight: 600;
     font-optical-sizing: auto;
     margin-top: 10px;
+    font-weight: 100;
 }
 
