--- a/src/pages/ChatbotStyle.css
+++ b/src/pages/ChatbotStyle.css
@@ -26,14 +26,16 @@ body {
               0 32px 64px -48px rgba(0,0,0,0.5);
   transition: all 0.1s ease;
 }
-.chatbot header {
+.chatbot header{
   padding: 16px 0;
   position: relative;
   text-align: center;
   color: #fff;
   background: #BC88C0;
   box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  height: 100px;
 }
+
 header h2 {
   font-size: 1.4rem;
 }
@@ -62,13 +64,14 @@ header h2 {
   justify-content: flex-end;
 }
 .chatbox .incoming span {
-  width: 32px;
-  height: 32px;
+  width: 42px;
+  height: 42px;
   color: #fff;
   cursor: default;
   text-align: center;
+  align-items: center;
   line-height: 32px;
-  align-self: flex-end;
+  align-self: center; /* Changed from flex-end to center */
   background: #BC88C0;
   border-radius: 4px;
   margin: 0 10px 7px 0;
