--- a/src/pages/PregnancyWheelStyle.css
+++ b/src/pages/PregnancyWheelStyle.css
@@ -1,8 +1,8 @@
 .wrapper1 {
     width: 100%;
-    height: 700px;
-    max-width: 700px;
-    background: rgba(238, 97, 153, 0.88);
+    height: 600px;
+    max-width: 600px;
+    background: rgba(238, 97, 153, .55);
     color: #4D4D4D;
     border-radius: 10px;
     padding: 10px 35px;
@@ -17,4 +17,11 @@
 
 .wrapper1 h2{
     margin-top: 2%;
+}
+
+.preg-bkg{
+    height: 64rem;
+    background: rgb(245,173,207);
+    background: linear-gradient(162deg,
+     rgba(245,173,207,1) 29%, rgba(196,255,159,1) 73%, rgba(253,176,255,1) 92%);
 }
