--- a/src/Components/Auth/LoginForm/LoginFormStyle.css
+++ b/src/Components/Auth/LoginForm/LoginFormStyle.css
@@ -180,7 +180,9 @@
   }
   }
 
-  .welcome-message-bkg {
+  /*.welcome-message-bkg {
     background-color: rgb(199, 235, 255, 0.5);
     margin-top: 10%;
-  }
+  }*/
+
+  
