--- a/src/Components/Admin/TabView/PregnancyWheelIVFStyle.css
+++ b/src/Components/Admin/TabView/PregnancyWheelIVFStyle.css
@@ -1,10 +1,48 @@
-.wrapper1 {
+.wrapper2 {
     display: flex;
     justify-content: center;
     align-items: center;
     /* Add other styles as needed */
     margin-top: 0%;
-    background-color: aliceblue;
+    background-color: rgba(238, 97, 153, 0.36);
+    width: 900px;
+    height: 700px;
+    padding-bottom: 2.1rem;
+    margin-left: 11rem;
+    font-family:"Montserrat",  sans-serif;
+    border-radius: 0px 0px 20px 20px;
+    color: rgb(43, 43, 43);
 }
 
+.resetBtn{
+    background-color: rgb(245, 245, 245);
+    padding: 4px 12px;
+    border-radius: 10px;
+    margin-top: 20px;
+}
 
+.IVF1 {
+    display: flex;
+    align-items: center;
+}
+
+.inp-IVF {
+    margin-left: 4%;
+    padding: 4px;
+    width: 6rem;
+    border-radius: 5px;
+    text-align: justify;
+    font-weight: 700;
+    font-size: large;
+    height: 2rem;
+}
+
+.wrapper2 h1{
+    color: #363636;
+    letter-spacing: .5px;
+    font-size: 40px;
+}
+
+.wrapper2 p{
+    margin-bottom: 30px;
+}
