--- a/src/Components/Admin/TabView/PregnancyWheelLMPStyle.css
+++ b/src/Components/Admin/TabView/PregnancyWheelLMPStyle.css
@@ -11,10 +11,7 @@
     margin-left: 11rem;
     font-family:"Montserrat",  sans-serif;
     border-radius: 0px 0px 20px 20px;
-}
-
-.calendar {
-    z-index: 1000;
+    color: rgb(43, 43, 43);
 }
 
 /* For 1 line of Ultrasound (US)*/
@@ -37,6 +34,10 @@
     padding: 4px;
     width: 5rem;
     border-radius: 5px;
+    text-align: justify;
+    font-weight: 700;
+    font-size: large;
+    height: 2rem;
 }
 
 .inp-usdays{
@@ -44,6 +45,10 @@
     padding: 4px;
     width: 5rem;
     border-radius: 5px;
+    text-align: justify;
+    font-weight: 700;
+    font-size: large;
+    height: 2rem;
 }
 
 .input-EGAdays, .input-EGAweeks{
@@ -52,9 +57,10 @@
 }
 
 .resetBtn{
-    background-color: aliceblue;
-    padding: 1px 10px;
+    background-color: rgb(245, 245, 245);
+    padding: 4px 12px;
     border-radius: 10px;
+    margin-top: 20px;
 }
 
 .LMP1 p{
@@ -126,7 +132,7 @@
     background-color: rgb(255, 255, 255);
     padding: 2px 20px;
     border-radius: 5px;
-    margin-left: 29rem;
+    margin-left: 15.5rem;
 }
 
 .SecondTrimester1 span{
@@ -141,4 +147,51 @@
     padding: 2px 20px;
     border-radius: 5px;
     margin-left: 16.5rem;
+}
+
+/* For 1 line of Estimated Gestational Age (EGA) */
+.input-EGA {
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px; /* Adjust as needed */
+}
+
+/* For 1 line of Estimated Gestational Age (EGA) */
+.input-EGAweeks, .input-EGAdays {
+    display: flex;
+    align-items: center;
+    gap: 3px; /* Adjust as needed */
+}
+
+.inp-EGAweeks{
+    margin-left: 8%;
+    padding: 4px;
+    width: 5rem;
+    border-radius: 5px;
+    text-align: justify;
+    font-weight: 700;
+    font-size: large;
+    height: 2rem;
+}
+
+.inp-EGAdays{
+    margin-left: 8%;
+    padding: 4px;
+    width: 5rem;
+    border-radius: 5px;
+    text-align: justify;
+    font-weight: 700;
+    font-size: large;
+    height: 2rem;
+}
+
+.wrapper1 p{
+    margin-bottom: 30px;
+}
+
+.wrapper1 h1{
+    color: #363636;
+    letter-spacing: .5px;
+    font-size: 40px;
 }
