--- a/src/Components/Admin/TabView/PregnancyWheelTABStyle.css
+++ b/src/Components/Admin/TabView/PregnancyWheelTABStyle.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 100%;
     gap: 0px;
     z-index: 1;
 }
@@ -11,6 +12,7 @@
 
 .TabButtons {
     margin-left: 11rem;
+    /* margin-bottom: 55%; */
     align-items: center;
     position: relative;
 }
@@ -19,7 +21,7 @@
   .tabBtn {
     background-color: #f0f0f0;
     border: none;
-    padding: 10px 113px;
+    padding: 10px 90px;
     font-size: 26px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -41,7 +43,7 @@
   }
   
 .preg-bkg{
-    height: 64rem;
+    height: 100vh;
     background: rgb(245,173,207);
     background: linear-gradient(162deg,
      rgba(245,173,207,1) 29%, rgba(196,255,159,1) 73%, rgba(253,176,255,1) 92%);
