--- a/src/Components/Admin/TabView/PregnancyWheelLMPStyle.css
+++ b/src/Components/Admin/TabView/PregnancyWheelLMPStyle.css
@@ -5,8 +5,8 @@
     /* Add other styles as needed */
     margin-top: 0%;
     background-color: rgba(238, 97, 153, 0.36);
-    width: 900px;
-    height: 700px;
+    width: 768px;
+    height: 650px;
     padding-bottom: 2.1rem;
     margin-left: 11rem;
     font-family:"Montserrat",  sans-serif;
@@ -18,20 +18,27 @@
 .input-US {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Adjust as needed */
-}
+    justify-content: space-between;
+     /* Adjust as needed */
 
+}
+.input-US h2{
+    font-size: 20px;
+}
 /* For 1 line of Ultrasound (US)*/
 .input-USweeks, .input-USdays {
     display: flex;
     align-items: center;
-    gap: 0px; /* Adjust as needed */
+    font-size: 15px;
+    gap: 0px; 
+    /* Adjust as needed */
 }
-
-
+.input-USweeks h3 , .input-USdays h3{
+    font-size: 15px;
+}
 .inp-usweeks{
     margin-left: 8%;
-    padding: 4px;
+    padding: 2px;
     width: 5rem;
     border-radius: 5px;
     text-align: justify;
@@ -55,29 +62,41 @@
     display: flex;
     align-items: center;
 }
-
+.input-EGAdays h3, .input-EGAweeks h3{
+    font-size: 15px;
+}
 .resetBtn{
     background-color: rgb(245, 245, 245);
     padding: 4px 12px;
     border-radius: 10px;
     margin-top: 20px;
+    margin-left: 40%
 }
 
 .LMP1 p{
     display: flex;
     align-items: center;
+    font-size: 15px;
 }
-
+.LMP1 h2{
+    font-size: 20px;
+}
 .LMP1{
     margin-top: 15px;
+    /* margin-left: 6%; */
 }
 
 
 .LMP1, .Conception1, .SecondTrimester1, .ThirdTrimester1, .DueDate1 {
     margin-bottom: 2%;
+    /* margin-left: 5%; */
 }
-
-
+.LMP1,.DueDate1 h2{
+    font-size: 20px;
+}
+.CycleLength-slider1 h2{
+    font-size: 20px;
+}
 .CycleLength-slider1 input[type='range'] {
     /* Change the width to make the slider longer */
     width: 100%;
@@ -118,42 +137,58 @@
     background-color: rgb(255, 255, 255);
     padding: 2px 20px;
     border-radius: 5px;
-    margin-left: 18.7rem;
+    margin-left: 12.8rem;
+    font-size: 15px;
 }
-
+.Conception1 h2{
+    font-size: 20px;
+}
 .DueDate1 span{
     background-color: rgb(255, 255, 255);
     padding: 2px 20px;
     border-radius: 5px;
-    margin-left: 16.5rem;
+    margin-left: 11rem;
+    font-size: 15px;
 }
 
 .LMP1 span{
     background-color: rgb(255, 255, 255);
     padding: 2px 20px;
     border-radius: 5px;
-    margin-left: 15.5rem;
+    margin-left: 10rem;
+    font-size: 15px;
 }
 
 .SecondTrimester1 span{
     background-color: rgb(255, 255, 255);
     padding: 2px 20px;
     border-radius: 5px;
-    margin-left: 16.2rem;
+    margin-left: 10.6rem;
+    font-size: 15px;
 }
-
+.SecondTrimester1 h2{
+    font-size: 20px;
+}
 .ThirdTrimester1 span{
     background-color: rgb(255, 255, 255);
     padding: 2px 20px;
     border-radius: 5px;
-    margin-left: 16.5rem;
+    margin-left: 11rem;
+    font-size: 15px;
 }
-
+.ThirdTrimester1 h2{
+    font-size: 20px;
+}
 /* For 1 line of Estimated Gestational Age (EGA) */
+.EGA1 h2{
+    text-align: center;
+    font-size: 20px;
+}
 .input-EGA {
-    display: inline-flex;
+    display: flex;
     align-items: center;
-    justify-content: space-between;
+
+    justify-content: space-evenly;
     gap: 40px; /* Adjust as needed */
 }
 
@@ -188,10 +223,12 @@
 
 .wrapper1 p{
     margin-bottom: 30px;
+    text-align: center;
 }
 
 .wrapper1 h1{
     color: #363636;
     letter-spacing: .5px;
     font-size: 40px;
+    text-align: center;
 }
