--- a/src/Components/Global/NavbarAdmin.css
+++ b/src/Components/Global/NavbarAdmin.css
@@ -1,21 +1,49 @@
 .navbaradmin {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 10vh;
-  width: 100%;
-  box-shadow: rgba(50, 50, 93, 0.23) 0px 10px 30px -20px;
-  margin-bottom: 20px;
   position: fixed;
-  top: 0px;
-  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 7.5rem;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 0px 0px 10px 10px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  z-index: 1;
 }
 .navbar-logo-admin {
-  display: inline-block;
-  font-size: 30px;
+  
+  margin-left: 5%;
+}
+.navbar-logo-admin h1{
+  color: #4d4d4d;
+  font-size: 50px;
   font-family: 'Montserrat', sans-serif;
-  margin-left: 60px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-left: 3%;
+  text-decoration: none;
 }
 .navbar-logo-admin span{
   color: rgb(160, 36, 163);
+}
+.navbar-MDYT{
+  margin-right: 5%;
+}
+.logo-st-margaret-style{
+  display: flex;
+  align-items: center;
+  width: 70rem;
+  /* background-color: aqua; */
+}
+.logo-st-margaret-style .logo-sizes{
+  width: 10%;
+}
+.logo-st-margaret-style p{
+  margin-left: 4%;
+  font-family: sans-serif bold;
+  font-size: 20px;
+  font-weight: 500;
 }
