--- a/src/pages/HomeStyle.css
+++ b/src/pages/HomeStyle.css
@@ -17,8 +17,8 @@
   border-radius: 0px 0px 10px 10px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   z-index: 1;
+  text-decoration: none;
 }
-
 .page_name{
   color: #4d4d4d;
   font-size: 50px;
@@ -27,6 +27,7 @@
   font-weight: 700;
   line-height: normal;
   margin-left: 3%;
+  text-decoration: none;
 }
 .page_name span{
   color:#A024A3;
@@ -37,14 +38,16 @@
   margin-right: 8%;
 }
 
+.navbar_master .st-margaret-nav, .plan-care-nav{
+  text-decoration: none;
+}
+
 .navbar_master h1{
   color: #4d4d4d;
   font-size: 17px;
   font-family:'Montserrat', sans-serif;
   margin-left: 1.5rem;
   cursor: pointer;
-
-
 }
 
 .classniline{
