--- a/src/Components/Global/Navbar_LandingStyle.css
+++ b/src/Components/Global/Navbar_LandingStyle.css
@@ -1,28 +1,140 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+
+.landing-nav{
+  text-decoration: none;
+
+}
+.landing-nav span{
+  color:#A024A3;
 }
 
-li {
-  list-style-type: none;
-  font-family: 'Montserrat', sans-serif;
-  color:rgba(50, 50, 93, 0.23) ;
-}
-.navbar {
+.navbar-landing-page{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  height: 10vh;
+  /* background-color: aqua; */
   width: 100%;
-  box-shadow: rgba(50, 50, 93, 0.23) 0px 10px 30px -20px;
-  margin-bottom: 20px;
-  position: fixed;
-  top: 0px;
-  z-index: 2;
+  height: 7.5rem;
+  border-radius: 0px 0px 10px 10px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.landing-nav{
+  color:#2c3e50;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
+.navbar-landing-page ul{
+  float: right;
+  margin-right: 20px;
+  
+}
+.navbar-landing-page ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+.navbar-landing-page ul li a { 
+  color:#2c3e50;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.checkbtn{
+  /* font-size: 30px; */
+  color: black;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+.checkbtn img{
+  width: 5%;
+  float: right;
+  
+}
+#check{
+  display: none;
+}
+
+
+@media (max-width: 952px){
+  .landing-nav {
+    font-size: 35px;
+    margin-left: 26%;
+    
+  }
+  .navbar-landing-page ul li a{
+    font-size: 16px;
+  }
+  .checkbtn{
+    position: absolute;
+    left: 0;
+    right: 0;
+    display: block;
+  }
+  .navbar-landing-page ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 82px;
+    left: -100%;
+    background-color: aqua;
+    text-align: center;
+    transition: all .5s;
+  }
+
+  #check:checked ~ ul{
+    left: 0;
+  }
+}
+@media (max-width: 858px){
+  .checkbtn{
+    position: absolute;
+    left: 0;
+    right: 0;
+    display: block;
+  }
+  .navbar-landing-page ul{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 100px;
+    left: -100%;
+    background-color: aqua;
+    text-align: center;
+    transition: all .5s;
+    z-index: 1;
+  }
+  .navbar-landing-page ul li{
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  .navbar_master ul li a{
+    font-size: 20px;
+  }
+  #check:checked ~ ul{
+    left: 0;
+  }
+}
+
+  
+
+
+
+
+
+
+
+/* 
 .navbar-logo {
   display: inline-block;
   font-size: 30px;
@@ -58,14 +170,14 @@ li {
 }
 .mobile-menu-icon {
   display: none;
-}
-button {
+} */
+/* button {
   border: none;
   text-decoration: none;
   font-size: 20px;
   background: none;
-}
-@media (max-width: 768px) {
+} */
+/* @media (max-width: 768px) {
   .logo {
     display: flex;
     position: absolute;
@@ -102,8 +214,8 @@ button {
   .hero h1 {
     font-size: 50px;
   }
-}
-
+} */
+/* 
  a:after{
   content: "";
   position: flex-end;
@@ -127,33 +239,64 @@ a{
   font-size: 18px;
   letter-spacing: 0.5px;
   padding: 0 10px;
-}
+} */
 
-@media screen and (max-width: 768px){
+/* @media screen and (max-width: 768px){
   a{
     margin-bottom: 40px;
   }
-}
-
-.flex-landingbkg1{
+} */
+/* .landingpagebkg{
   display: flex;
+  flex-direction: row;
+  position: absolute;  
+  z-index: -1;
+  right: 0;
+}
+.flex-landingbkg2{
+  position: absolute;
+  float: right;
+  width: 100%;
+  height: 100px;
+  z-index: -1;
+}
+.flex-landingbkg1 img{
+  width:100%;
+  height: 80vh;
+  margin-left: 5%;
+  margin-top: 9%;
+}
+.flex-landingbkg2 img{
+  width:35%;
+  margin-right: 5%;
+  float: right;
+  height: 80vh;
+  height: 45%;
+  position: absolute;
+  height: 87vh;
+} */
+
+/* .flex-landingbkg1{
+  display: flex;
+  flex-direction:row;
   margin: 100px 0;
   height: 90%;
   padding: 50px 0xp 0px;
   padding-left: 20px;
   position: absolute;
+  z-index: -1;
 }
 
 .flex-landingbkg2{
   display: flex;
   margin-top: 5px;
   height: 100%;
-  position: absolute;
   padding-left: 67%;
   object-fit: cover;
-}
+  z-index: -1;
+} */
 
-@media screen and (max-width: 768px){
+/* @media screen and (max-width: 768px){
   .flex-landingbkg1, .flex-landingbkg2{
     display: block;
     height: auto;
@@ -166,6 +309,6 @@ a{
   .flex-landingbkg2{
     order: 2;
   }
-}
+} */
 
  
