--- a/src/Components/Auth/LoginForm/LoginFormStyle.css
+++ b/src/Components/Auth/LoginForm/LoginFormStyle.css
@@ -1,43 +1,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:wght@700&display=swap');
 
-
+.wrapper-landing-page{
+    display: flex;
+    /* flex: 1; */
+    justify-content: end;
+    /* margin-right:55px; */
+    position: absolute;
+    height: 100vh;
+    width: 45%;
+    /* left: 55%; */
+    /* float: right; */
+    /* left: 5rem; */
+    /* width: 30%; */
+}
 
 .wrapper {
-    width: 100%;
-    height: auto;
-    max-width: 650px;
+    width:500px;
     background: transparent;
     color: #000;
     border-radius: 10px;
-    padding: 80px 15.5px;
+    padding: 50px 15.5px;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(25px);
     border-color: whitesmoke;
     position: absolute;
-    top: 52%;
     transform: translateX(185%);
-    margin-top: 20%;
+    /* margin-top:2%; */
+    right:2rem;
     display: flex;
 }
+@media (max-width: 952px){
+    .wrapper-landing-page{
+    height: 80%;
+    width: 5%;
+    }
+    .wrapper{
+    top: 3%;
+    width: 350px;
+    height: 80%;
+    margin-top:1%;
+    }
+    .wrapper h2{
+
+    margin-top:1%;
+    font-size:20px;
+    }
+    .wrapper-landing-page .wrapper p{
+        font-size:14px;
+    }
+    .remember-forgot label{
+        font-size: 15px;
+    }
+    .forgot-password a{
+        font-size: 15px;
+    }
+    .wrapper .register-link p {
+        font-size: 14px;
+        text-align: center;
+        margin: 10px 0 15px;
+    }
     
-.wrapper h1 {
-    font-size: 40px;
+    .register-link a {
+        font-size: 14px;
+    }
+
+}   
+@media (max-width: 756px){
+
+}
+.wrapper h2 {
+    /* font-size: 25px; */
     text-align: center;
     font-weight: bolder;
-    /* margin-bottom: 27.5px; */
+    margin-bottom: 27.5px;
 }
 
-.wrapper h5 {
-    font-size: 23px;
-    font-weight: 35;
+.wrapper p {
+    font-size: 20px;
+    /* font-weight: 35; */
     text-align: center;
 }
 
-.wrapper .input-box {
+ .input-box {
     position: relative;
     width: 100%;
-    height: 60px;
+    height: 30px;
     margin: 30px 0;
 }
 
@@ -77,14 +125,16 @@
  .remember-forgot{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    text-align: center;
     font-size: 20.5px;
-    margin: -15px 0 15px;
+    /* margin: -15px 0 15px; */
 }
 
 .remember-forgot label input{
     accent-color: gray;
     margin-right: 4px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 
 .remember-forgot a{
@@ -95,7 +145,7 @@
 }
 
 .remember-forgot a:hover{
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .wrapper button {
@@ -157,6 +207,35 @@
     text-align: justify;
     color: rgb(70, 70, 70);
 }
+.landingpagebkg{
+    display: flex;
+    flex-direction: row;
+    /* position: absolute;   */
+    z-index: -1;
+    right: 0;
+  }
+  .flex-landingbkg2{
+    position: absolute;
+    float: right;
+    width: 100%;
+    /* height: 100px; */
+    z-index: -1;
+  }
+  .flex-landingbkg1 img{
+    width:100%;
+    height: 80vh;
+    margin-left: 5%;
+    margin-top: 9%;
+  }
+  .flex-landingbkg2 img{
+    width:35%;
+    margin-right: 5%;
+    float: right;
+    height: 80vh;
+    /* height: 45%; */
+    /* position: absolute; */
+    /* height: 87vh; */
+  }
 
 .welcome-message .logo-color {
     color: rgb(160, 36, 163);
