--- a/src/Components/Admin/Dashboard.css
+++ b/src/Components/Admin/Dashboard.css
@@ -432,13 +432,102 @@ table tbody tr {
     /* position: fixed; */
     padding-top: 1%;
 }
+@media (max-width: 1024){
 
+}
+@media (max-width: 952px){
+    .dash-name{
+        margin-left: 25%;    
+        }
+        .page-content .analytics{
+            /* margin-left: 25%; */
+            margin-right: 18%;
+        }
+        .approve-name-dashboard, .pending-name-dashboard{
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            margin-right: 17.9%;
+            /* background-color: #11a8c3; */
+        }
+        .card-main-dashboard, .card-main-dashboard-2, .card-main-dashboard-3, .card-main-dashboard-4{
+            width: 100%;
+            padding:1rem;
+            margin-left: 15%;
+            margin-right: 15%;
+            }
+            .table-responsive .table-appointment-style, .pending-appointment-style-name{
+            display: flex;
+            flex-direction: row;
+            margin-right: 20%;
+            /* width: 100%; */
+        }
+}
+@media (max-width: 858px){
+    .dash-name{
+       margin-left: 25%;    
+       }
+       .card-main-dashboard, .card-main-dashboard-2, .card-main-dashboard-3, .card-main-dashboard-4{
+        width: 100%;
+        padding:1rem;
+        margin-left: 15%;
+        margin-right: 15%;
+        }
+     .page-content .analytics{
+        /* margin-left: 25%; */
+        margin-right: 16rem;
+    }
+       .approve-name-dashboard, .pending-name-dashboard{
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        margin-right: 25rem;
+    }
+           .table-responsive .table-appointment-style, .pending-appointment-style-name{
+            display: flex;
+            flex-direction: row;
+            margin-right: 20%;
+            /* width: 100%; */
+        }
+        .approve-name-dashboard, .pending-name-dashboard{
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            margin-right: 17.9%;
+            /* background-color: #11a8c3; */
+        }
+   }
 
+@media (max-width: 768px){
+ .dash-name{
+    margin-left: 12rem;    
+    }
+        .analytics{
+            margin-left: 15%;
+            margin-right: 15%;
+        }
+        .approve-name-dashboard, .pending-name-dashboard{
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            margin-right: 20%;
+            /* background-color: #11a8c3; */
+        }
+        
+        
+        .table-responsive .table-appointment-style, .pending-appointment-style-name{
+            display: flex;
+            flex-direction: row;
+            margin-right: 15%;
+            /* width: 100%; */
+        }
+        
 
+}
 
 @media (max-width:640px) {
 .analytics .dash-name{
-    margin-left: 10rem;
+    margin-left: 9rem;
     }
 .card-main-dashboard, .card-main-dashboard-2, .card-main-dashboard-3, .card-main-dashboard-4{
     width: 100%;
