--- a/src/pages/searchbar.css
+++ b/src/pages/searchbar.css
@@ -1,36 +1,82 @@
-
+.backgorund-filuup{
+  background-color: #A024A3;
+  width: 100%;
+  height: 100vh;
+}
 .search-bar {
-  display: flex;
+  /* display: grid;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  /* padding: 45%; */
-  width: 120rem;
+  width: 50%;
+  margin-right:50rem;
   height: 100vh;
-  background-color: #f0f0f0;
   border-radius: 5px;
   gap: 1rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #007bff; */
+  display: grid;
+  grid-template-columns: repeat(1 , 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: 50%;
+  height: 55vh;
+  margin-left: 5%;
+  margin-top: 5%;
+  align-items: center;
+  grid-row-gap: 45px;
+  background-color: white;
+  position: absolute;
 }
 
 .search-bar input{
-  display: flex;
-  align-items: center;
-  /* margin-right: 10px; */
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  width: 35%;
+  margin-left: 17%;
+  width: 15rem;
+  padding: 1%;
 }
 
 .search-bar button {
-  padding: 8px 16px;
+  padding: 8px 15px;
   background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 3px;
   cursor: pointer;
 }
-
+.btn-proceed-client{
+  display: grid;
+  justify-content:center;
+  align-items: center;
+  margin-bottom: 5%;
+}
 .search-bar button:hover {
   background-color: #0056b3;
+}
+.design-fil-up{
+  display: grid;
+  grid-template-columns:2f;
+  grid-template-rows: 1fr;
+  /* margin-right: 5%; */
+  justify-content: end;
+  margin-left: 55%;
+  width: auto;
+  /* height: 95%; */
+  /* height: 100rem; */
+  /* bottom: 55%; */
+  position: absolute;
+  /* background-color: #A024A3; */
+  color: #d8d2d2;
+  /* z-index: -1; */
+}
+.design-fil-up p{
+  margin-left: 5%;
+}
+.design-fil-up-text{
+  text-align: center;
+  margin-top: 25%;
+  margin-bottom: 0;
+  height: 100%;
+}
+.fill-up-secondpara{
+  margin-top: 5%;
+  /* margin-bottom: 56%; */
 }
